# blender-robin

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  robin_config.json  robin_interactive.py  split_cases.py  test_albedo_config.json  test_matcap.py  使用文档.md  材质还原度.json  表面完备度.json
.claude/: settings.local.json
blender_robin/: __init__.py  batch.py  cli.py  config.py  discovery.py  progress.py  queue.py  renderer.py  worker.py
blender_robin/blender_scripts/: __init__.py  albedo.py  clay.py  normal_map.py  normalize_export.py  render_setup.py  render_views.py  rgb_closeup.py  uv_checker.py  uv_checker_glb.py  wireframe.py
blender_robin/cloud/: __init__.py  notify.py  queue.py  storage.py  worker.py
blender_robin/cloud/k8s_templates/: worker-deployment.yaml  worker-job.yaml
docs/: camera_placement.md  fix_orphan_mesh_filtering.md  normalization.md  render_modes.md
examples/: batch_render.toml  queue_jobs.toml  single_render.toml  uv_check.toml
