[project]
name = "blender-robin"
version = "0.1.0"
description = "Blender rendering scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "tomli-w>=1.0",
]

[project.scripts]
robin = "blender_robin.cli:cli"

[tool.setuptools.packages.find]
include = ["blender_robin*"]

[tool.uv]
package = true
